--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ subprojects {
     repositories {
         mavenCentral()
         maven {
+            url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
             url 'https://nexus.ibj.io/repository/maven-public/'
         }
     }
